# NewCPP

./: Makefile  loger.cpp  loger.h  main  main.cpp  unix_notify.cpp  unix_notify.h
DeploymentAgent/: CMakeLists.txt  README  deployment_config.json
DeploymentAgent/src/: archive_detector.h  configuration.h  deploy_pipeline.h  file_mover.h  file_remover.h  folder_monitor.h  install_package_detector.h  main.cpp  mount_point_resolver.h  system_cmd_executor.h  system_observable.h  system_observer.h  temporary_folder.h  unpacker.h  usb_mass_storage_monitor.h  usb_processing_pipeline.h
MLCommon/: CMakeLists.txt
MLCommon/CMake/: GTest.cmake  lizard.cmake
MLCommon/inc/Configuration/: configmanager.h  iconfigmanager.h  timings.h
MLCommon/inc/Converter/: converterconstants.h  converterutils.h
MLCommon/inc/Network/: IMLMQtt.h  IMLMQttListener.h  itcpclient.h  itcpserver.h  itcpserverlistener.h  socket.h  tcpclient.h
MLCommon/inc/Network/Ipc/: IIpcListener.h  IIpcSocket.h  IpcConnector.h  IpcReceiver.h  IpcTransmitter.h  NaiveURIParser.h
MLCommon/inc/Network/Unix/: EPoolWorker.h  IpcSocketUnix.h
MLCommon/inc/Network/Windows/: IpcSocketWindows.h  fd_set_helpers.h  network_init.h
MLCommon/inc/SensorData/DatFile/: DatFileReader.h  DatFileWriter.h  FileReadStream.h  ISourceAdapter.h  ISourceAdapterListener.h
MLCommon/inc/SensorData/Frame/: IFrame.h  V4LFrame.h
MLCommon/inc/SensorData/Stream/: IReadStream.h  IStreamAdapter.h  IStreamAdapterListener.h  IWriteStream.h
MLCommon/inc/Stm/: FsmHandler.h  IParameter.h  TransitionRow.h
MLCommon/inc/TimerFramework/: Event.h  EventType.h  ITimerController.h  ITimerEntry.h  ITimerListener.h  Message.h  Timer.h  TimerEntry.h  TimerEvent.h  Worker.h
MLCommon/inc/Tools/: JsonReader.h  MemWritter.h  SlidingWindow.h  SlidingWindowMgr.h  Ticker.h  Utils.h
MLCommon/inc/Types/: DataContainer.h  Module.h  SensorId.h
MLCommon/src/Configuration/: configmanager.cpp
MLCommon/src/Converter/: converterutils.cpp
MLCommon/src/Network/: tcpclient.cpp
MLCommon/src/Network/Ipc/: IIpcSocket.cpp  IpcConnector.cpp  IpcReceiver.cpp  IpcTransmitter.cpp
MLCommon/src/Network/Unix/: IpcConnectorUnix.cpp  IpcReceiverUnix.cpp  IpcSocketUnix.cpp  IpcTransmitter.cpp  unix_socket.cpp
MLCommon/src/Network/Windows/: IpcConnectorWindows.cpp  IpcReceiverWindows.cpp  IpcSocketWindows.cpp  IpcTransmitter.cpp  network_init.cpp  windows_socket.cpp
MLCommon/src/SensorData/DatFile/: DatFileReader.cpp  DatFileWriter.cpp  FileReadStream.cpp
MLCommon/src/SensorData/Frame/: V4LFrame.cpp
MLCommon/src/TimerFramework/: Event.cpp  Message.cpp  Timer.cpp  TimerEvent.cpp  Worker.cpp
MLCommon/src/Tools/: JsonReader.cpp  MD5.cpp  MemWritter.cpp  Utils.cpp
MLCommon/src/Types/: DataContainer.cpp  Module.cpp
MLCommon/test/: CMakeLists.txt  generic_networking_test.cpp  ipc_test.cpp  ipc_test.h  ml_controller_test.cpp  sliding_window_mrg_test.cpp  sliding_window_test.cpp  ticker_test.cpp
dir_crawl/: .main.cpp.swp  .unix_crawler.h.swp  Makefile  main  main.cpp
epoll/: Makefile  epoll.c  epoll_example.c  main
inotify/: dnotify.c  main  main.c  notify  notify.c  observ.c
inotify/tmp/: file.txt
notify_file/: EPoolWorker.h  folder_monitor.h  main  main.cpp  system_observable.h  system_observer.h
notify_file/tmp/: file
